--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
+    "rxjs": "^6.5.3",
     "semantic-ui": "^2.4.2",
     "semantic-ui-react": "^0.88.1"
   },
